[workspace]
resolver = "3"
members = ["esp-idf/crates/*", "esp-idf/examples/*", "shared/crates/*"]
default-members = ["esp-idf/examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
critical-section = { version = "1.2", default-features = false, features = [
  "std"
] }
embassy-executor = { version = "0.10", features = [
  "executor-thread",
  "platform-std"
] }
embassy-sync = "0.8"
embassy-time = "0.5"
embuild = "0.33"
esp-idf-config = { path = "esp-idf/crates/esp-idf-config" }
esp-idf-platform = { path = "esp-idf/crates/platform" }
esp-idf-svc = { version = "0.52", features = [
  "embassy-sync",
  "embassy-time-driver"
] }
esp-idf-zenoh-pico-sys = { path = "esp-idf/crates/zenoh-pico-sys" }
heapless = "0.9"
log = "0.4"
static_cell = "2.1"
thiserror = "2.0"
zenoh-pico = { path = "shared/crates/zenoh-pico" }

[profile.dev]
opt-level = "z"
debug = true  # Symbols are nice, and they don't increase the size on Flash

[profile.release]
opt-level = "s"
