[workspace]
resolver = "3"
members = ["crates/*", "examples/*"]
default-members = ["crates/yaair-esp-zenoh-network"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
critical-section = { version = "1.2", default-features = false, features = [
  "std"
] }
darling = "0.23"
embassy-executor = { version = "0.10", features = [
  "executor-thread",
  "platform-std"
] }
embassy-sync = "0.8"
embuild = "0.33"
esp-idf-svc = { version = "0.52", features = [
  "embassy-sync",
  "embassy-time-driver"
] }
examples-common = { path = "examples/common" }
ffi-utils = { path = "crates/ffi-utils" }
heapless = "0.9"
itertools = "0.14.0"
log = "0.4"
macro-utils = { path = "crates/macro-utils" }
num_enum = "0.7"
postcard = { version = "1.1", features = ["alloc"] }
proc-macro-crate = "3.5"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
static_cell = "2.1"
strum = { version = "0.28", features = ["default", "derive"] }
syn = "2.0"
thiserror = "2.0"
uhlc = "0.9"
uuid = "1.23"
yaair = "0.4"
yaair-esp-zenoh-network = { path = "crates/yaair-esp-zenoh-network" }
yaair_serde = "0.2"
zenoh-pico = { path = "crates/zenoh-pico" }
zenoh-pico-macros = { path = "crates/zenoh-pico-macros" }
zenoh-pico-sys = { path = "crates/zenoh-pico-sys" }

[profile.dev]
opt-level = "z"
debug = true  # Symbols are nice, and they don't increase the size on Flash

[profile.release]
opt-level = "s"
