[workspace]
resolver = "3"
members = ["crates/*", "examples/*"]
default-members = ["crates/yaair-zenoh-network"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "A zenoh based network for YAAIR"
repository = "https://github.com/lspita-academic/yaair-zenoh-network"
keywords = ["network", "yaair", "zenoh"]
categories = ["embedded", "network-programming"]

[workspace.dependencies]
critical-section = { version = "1.2", default-features = false, features = [
  "std"
] }
darling = "0.23"
embassy-executor = { version = "0.10", features = [
  "executor-thread",
  "platform-std",
] }
embassy-sync = "0.8"
embassy-time = "0.5"
embuild = { version = "0.33", features = ["default", "espidf"] }
env_logger = "0.11"
esp-idf-svc = { version = "0.52", features = [
  "embassy-sync",
  "embassy-time-driver",
] }
examples-common = { path = "examples/common" }
ffi-utils = { path = "crates/ffi-utils" }
heapless = "0.9"
hex = "0.4"
itertools = "0.14.0"
log = "0.4"
macro-utils = { path = "crates/macro-utils" }
net-literals = "0.2"
num_enum = "0.7"
postcard = { version = "1.1", features = ["alloc"] }
proc-macro-crate = "3.5"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_cell = "2.1"
strum = { version = "0.28", features = ["default", "derive"] }
syn = "2.0"
thiserror = "2.0"
uhlc = "0.9"
yaair = "0.4"
yaair_serde = "0.2"
yaair-zenoh-network = { path = "crates/yaair-zenoh-network" }
zenoh = "1.9"
zenoh-pico = { path = "crates/zenoh-pico" }
zenoh-pico-build-defaults = { path = "crates/zenoh-pico-build-defaults" }
zenoh-pico-macros = { path = "crates/zenoh-pico-macros" }
zenoh-pico-sys = { path = "crates/zenoh-pico-sys" }

[profile.dev]
opt-level = "z"
debug = true  # Symbols are nice, and they don't increase the size on Flash

[profile.release]
opt-level = "s"
