[workspace]
resolver = "3"
members = ["crates/*", "examples/*"]
default-members = ["examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
critical-section = { version = "1.2", default-features = false, features = [
  "std"
] }
embassy-executor = { version = "0.10", features = [
  "platform-std",
  "executor-thread"
] }
embassy-sync = "0.8"
embassy-time = "0.5"
embuild = "0.33"
esp-idf-svc = { version = "0.52", features = [
  "embassy-sync",
  "embassy-time-driver"
] }
heapless = "0.9"
log = "0.4"
platform = { path = "crates/platform" }
static_cell = "2.1"
thiserror = "2.0"
zenoh-pico = { path = "crates/zenoh-pico" }
zenoh-pico-sys = { path = "crates/zenoh-pico-sys" }

[profile.dev]
opt-level = "z"
debug = true  # Symbols are nice, and they don't increase the size on Flash

[profile.release]
opt-level = "s"
