[package]
name = "ping-pong"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[example]]
name = "ping"

[[example]]
name = "pong"

[dependencies]
critical-section.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
esp-idf-platform.workspace = true
esp-idf-svc.workspace = true
log.workspace = true
postcard.workspace = true
static_cell.workspace = true
zenoh-pico.workspace = true

[build-dependencies]
embuild.workspace = true
