[package]
name = "examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
critical-section.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
esp-idf-platform.workspace = true
esp-idf-svc.workspace = true
log.workspace = true
postcard.workspace = true
static_cell.workspace = true
uuid.workspace = true
yaair.workspace = true
yaair-esp-zenoh-network.workspace = true
yaair_serde.workspace = true
zenoh-pico.workspace = true

[build-dependencies]
embuild.workspace = true

[features]
node1 = []
node2 = []
node3 = []
