[package]
name = "yaair-zenoh-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "riscv32imc-esp-espidf",
]

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["../../lib/zenoh-pico"]
bindings_header = "../../lib/zenoh-pico/bindings.h"
bindings_module = "zenoh_pico"

[dependencies]
hex.workspace = true
itertools.workspace = true
log.workspace = true
net-literals.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
yaair.workspace = true

[build-dependencies]
embuild.workspace = true
itertools.workspace = true
strum.workspace = true
thiserror.workspace = true

[target.'cfg(all(not(target_os = "none"), not(target_os = "espidf")))'.dependencies]
serde_json.workspace = true
zenoh.workspace = true
zenoh-pico-build-defaults.workspace = true

[target.'cfg(target_os = "espidf")'.dependencies]
zenoh-pico.workspace = true

[features]
default = ["heartbit"]
heartbit = []
