[package]
name = "zenoh-pico"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["lib"]
bindings_header = "lib/zenoh-pico/include/zenoh-pico.h"
bindings_module = "zenoh_pico"

[dependencies]
embassy-sync.workspace = true
esp-idf-svc.workspace = true
ffi-utils.workspace = true
log.workspace = true
num_enum.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
uhlc.workspace = true
zenoh-pico-macros.workspace = true

[build-dependencies]
embuild.workspace = true
