[package]
name = "examples-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
critical-section.workspace = true
esp-idf-platform.workspace = true
esp-idf-svc.workspace = true
log.workspace = true
static_cell.workspace = true
uuid.workspace = true
zenoh-pico.workspace = true

[build-dependencies]
embuild.workspace = true
