[package]
name = "examples-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
static_cell.workspace = true
thiserror.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "espidf")'.dependencies]
critical-section.workspace = true
esp-idf-svc.workspace = true
heapless.workspace = true
zenoh-pico.workspace = true


[build-dependencies]
embuild.workspace = true
