[package]
name = "gradient"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[example]]
name = "gradient-node1"
path = "examples/node1.rs"

[[example]]
name = "gradient-node2"
path = "examples/node2.rs"

[[example]]
name = "gradient-node3"
path = "examples/node3.rs"

[dependencies]
critical-section.workspace = true
embassy-executor.workspace = true
esp-idf-svc.workspace = true
examples-common.workspace = true
log.workspace = true
uuid.workspace = true
yaair.workspace = true
yaair-zenoh-network.workspace = true
yaair_serde.workspace = true
zenoh-pico.workspace = true

[build-dependencies]
embuild.workspace = true
