[package]
name = "gradient-example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[example]]
name = "gradient-node1"
path = "examples/node1.rs"

[[example]]
name = "gradient-node2"
path = "examples/node2.rs"

[[example]]
name = "gradient-node3"
path = "examples/node3.rs"

[dependencies]
embassy-executor.workspace = true
examples-common.workspace = true
log.workspace = true
yaair.workspace = true
yaair_serde.workspace = true
yaair-zenoh-network.workspace = true

[build-dependencies]
embuild.workspace = true

[target.'cfg(target_os = "espidf")'.dependencies]
critical-section.workspace = true
esp-idf-svc.workspace = true
examples-common.workspace = true
zenoh-pico.workspace = true
