[package]
name = "ping-pong-example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
embassy-executor.workspace = true
embassy-time.workspace = true
examples-common.workspace = true
log.workspace = true
postcard.workspace = true
static_cell.workspace = true

[build-dependencies]
embuild.workspace = true

[target.'cfg(target_os = "espidf")'.dependencies]
critical-section.workspace = true
esp-idf-svc.workspace = true
zenoh-pico.workspace = true
