set(ZENOH_PICO_DIR ${CMAKE_CURRENT_LIST_DIR}/zenoh-pico)
set(ZENOH_PICO_INCLUDE_DIR ${ZENOH_PICO_DIR}/include)
set(ZENOH_PICO_SRC_DIR ${ZENOH_PICO_DIR}/src)
set(ZENOH_PICO_HEADER ${ZENOH_PICO_INCLUDE_DIR}/zenoh-pico.h)
set(ZENOH_PICO_LIBNAME "zenohpico")
set(BATCH_MULTICAST_SIZE 2048)

file(GLOB_RECURSE ZENOH_PICO_SRCS
    "${ZENOH_PICO_SRC_DIR}/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_ARDUINO_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/arduino/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_ARDUINO_OPENCR_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/arduino/opencr/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_ARDUINO_ESP32_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/arduino/opencr/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_COMMON_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/common/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_EMSCRIPTEN_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/emscripten/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_ESPIDF_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/espidf/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_FLIPPER_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/flipper/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_FREERTOS_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/freertos/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_FREERTOS_TCP_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/freertos/freertos_plus_tcp/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_FREERTOS_LWIP_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/freertos/lwip/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_MBED_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/mbed/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_RPI_PICO_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/rpi_pico/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_THREADX_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/threadx/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_THREADX_STM32_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/threadx/stm32/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_UNIX_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/unix/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_UNIX_LINK_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/unix/link/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_WINDOWS_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/windows/*"
)
file(GLOB_RECURSE ZENOH_PICO_SYSTEM_ZEPHYR_SRCS
    "${ZENOH_PICO_SRC_DIR}/system/zephyr/*"
)

list(REMOVE_ITEM ZENOH_PICO_SRCS ${ZENOH_PICO_SYSTEM_SRCS})
list(APPEND ZENOH_PICO_SRCS ${ZENOH_PICO_SYSTEM_COMMON_SRCS})

list(APPEND ZENOH_PICO_COMPILE_DEFS
    BATCH_MULTICAST_SIZE=${BATCH_MULTICAST_SIZE}
)

list(APPEND ZENOH_PICO_SRCS ${ZENOH_PICO_SYSTEM_ESPIDF_SRCS})
list(APPEND ZENOH_PICO_COMPILE_DEFS ZENOH_ESPIDF)
list(APPEND ESP_IDF_COMPONENT_DEPS driver)

idf_component_register(
    SRCS ${ZENOH_PICO_SRCS}
    INCLUDE_DIRS ${ZENOH_PICO_INCLUDE_DIR}
    REQUIRES ${ESP_IDF_COMPONENT_DEPS}
)
target_compile_definitions(${COMPONENT_LIB} PUBLIC ${ZENOH_PICO_COMPILE_DEFS})
