[package]
name = "esp-idf-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# https://github.com/esp-rs/esp-idf-sys/blob/master/BUILD-OPTIONS.md
[package.metadata.esp-idf-sys]
esp_idf_version = "v5.3.3"

[build-dependencies]
embuild.workspace = true
zenoh-pico-sys.workspace = true
