include($ENV{CARGO_WORKSPACE_DIR}/lib/zenoh-pico/zenoh-pico.cmake)

list(APPEND ZENOH_PICO_SRCS ${ZENOH_PICO_SYSTEM_ESPIDF_SRCS})
list(APPEND ZENOH_PICO_COMPILE_DEFS ZENOH_ESPIDF)
list(APPEND ESP_IDF_COMPONENT_DEPS driver)

set(ZENOH_PICO_COMPONENT_HEADER ${CMAKE_CURRENT_LIST_DIR}/zenoh-pico-component.h)
configure_file(${ZENOH_PICO_COMPONENT_HEADER}.in ${ZENOH_PICO_COMPONENT_HEADER} @ONLY)

idf_component_register(
    SRCS ${ZENOH_PICO_SRCS}
    INCLUDE_DIRS ${ZENOH_PICO_INCLUDE_DIR}
    REQUIRES ${ESP_IDF_COMPONENT_DEPS}
)

target_compile_definitions(${COMPONENT_LIB} PUBLIC ${ZENOH_PICO_COMPILE_DEFS})
